2007-05-03  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/Makefile: added performance results paper
	* doc/papers/netperf_centos_comp.plot: added performance results paper
	* doc/papers/netperf_centos.dat: added performance results paper
	* doc/papers/netperf_centos_delay.plot: added performance results paper
	* doc/papers/netperf_centos_perf.plot: added performance results paper
	* doc/papers/netperf_centos_thrput.plot: added performance results paper
	* doc/papers/netperf_fc6_comp.plot: added performance results paper
	* doc/papers/netperf_fc6.dat: added performance results paper
	* doc/papers/netperf_fc6_delay.plot: added performance results paper
	* doc/papers/netperf_fc6_perf.plot: added performance results paper
	* doc/papers/netperf_fc6_thrput.plot: added performance results paper
	* doc/papers/netperf_nb_comp.plot: added performance results paper
	* doc/papers/netperf_nb.dat: added performance results paper
	* doc/papers/netperf_nb_delay.plot: added performance results paper
	* doc/papers/netperf_nb_perf.plot: added performance results paper
	* doc/papers/netperf_nb_thrput.plot: added performance results paper
	* doc/papers/netperf_rh7_comp.plot: added performance results paper
	* doc/papers/netperf_rh7.dat: added performance results paper
	* doc/papers/netperf_rh7_delay.plot: added performance results paper
	* doc/papers/netperf_rh7_perf.plot: added performance results paper
	* doc/papers/netperf_rh7_thrput.plot: added performance results paper
	* doc/papers/netperf_smp_comp.plot: added performance results paper
	* doc/papers/netperf_smp.dat: added performance results paper
	* doc/papers/netperf_smp_delay.plot: added performance results paper
	* doc/papers/netperf_smp_perf.plot: added performance results paper
	* doc/papers/netperf_smp_thrput.plot: added performance results paper
	* doc/papers/netperf_suse_comp.plot: added performance results paper
	* doc/papers/netperf_suse.dat: added performance results paper